// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block.vue > Should show a message if the block does not exist 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <div class="v-row">
        <div class="v-col" align="center"><i class="mdi-cube-outline mdi v-icon notranslate v-theme--light text-primary-lighten-1" style="font-size: 200px; height: 200px; width: 200px; opacity: 0.25;" aria-hidden="true"></i></div>
      </div>
      <div class="v-row">
        <div class="v-col text-body-1 text-center"> This block has not been mined. Current block: <a style="text-decoration: none;">0</a></div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`Block.vue > Should show a message if the block is syncing 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-row">
    <div class="v-col v-col-6">
      <div class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat my-2" role="alert">
        <!----><span class="v-alert__underlay"></span>
        <!---->
        <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
        <div class="v-alert__content">
          <!----> Some transactions in this block are still being processed (3 / 5).
        </div>
        <!---->
        <!---->
      </div>
      <h2>Block 1</h2>
    </div>
  </div>
  <div class="v-row mb-4">
    <div class="v-col-sm-12 v-col-md-12 v-col-lg-2 v-col">
      <div class="v-list-subheader text-overline">
        <div class="v-list-subheader__text">Gas Limit</div>
      </div> 1,000,000,000
    </div>
    <hr class="v-divider v-divider--vertical v-theme--light" aria-orientation="vertical" role="separator">
    <div class="v-col-sm-12 v-col-md-12 v-col-lg-2 v-col">
      <div class="v-list-subheader text-overline">
        <div class="v-list-subheader__text">Mined On</div>
      </div> 10/18 8:28:41 PM<br><small>in 2 months</small>
    </div>
    <hr class="v-divider v-divider--vertical v-theme--light" aria-orientation="vertical" role="separator">
    <div class="v-col-sm-12 v-col-md-12 v-col-lg-4 v-col">
      <div class="v-list-subheader text-overline">
        <div class="v-list-subheader__text">Hash</div>
      </div><span style="overflow-wrap: break-word;">0x98c6edb3bb1124680a97661c1f5794d60617abb57bd1e611d81fc5b941f36d30</span>
    </div>
    <!--v-if-->
  </div>
  <h4>Transactions</h4>
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <transactions-list-stub blocknumber="1" withcount="true"></transactions-list-stub>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`Block.vue > Should show the block component 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-row">
    <div class="v-col v-col-6">
      <div class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat my-2" role="alert" style="display: none;">
        <!----><span class="v-alert__underlay"></span>
        <!---->
        <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
        <div class="v-alert__content">
          <!----> Some transactions in this block are still being processed (5 / 5).
        </div>
        <!---->
        <!---->
      </div>
      <h2>Block 1</h2>
    </div>
  </div>
  <div class="v-row mb-4">
    <div class="v-col-sm-12 v-col-md-12 v-col-lg-2 v-col">
      <div class="v-list-subheader text-overline">
        <div class="v-list-subheader__text">Gas Limit</div>
      </div> 1,000,000,000
    </div>
    <hr class="v-divider v-divider--vertical v-theme--light" aria-orientation="vertical" role="separator">
    <div class="v-col-sm-12 v-col-md-12 v-col-lg-2 v-col">
      <div class="v-list-subheader text-overline">
        <div class="v-list-subheader__text">Mined On</div>
      </div> 10/18 8:28:41 PM<br><small>in 2 months</small>
    </div>
    <hr class="v-divider v-divider--vertical v-theme--light" aria-orientation="vertical" role="separator">
    <div class="v-col-sm-12 v-col-md-12 v-col-lg-4 v-col">
      <div class="v-list-subheader text-overline">
        <div class="v-list-subheader__text">Hash</div>
      </div><span style="overflow-wrap: break-word;">0x98c6edb3bb1124680a97661c1f5794d60617abb57bd1e611d81fc5b941f36d30</span>
    </div>
    <!--v-if-->
  </div>
  <h4>Transactions</h4>
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <transactions-list-stub blocknumber="1" withcount="true"></transactions-list-stub>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
